# archive-past-works

./: CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ecosystem.yaml  pyproject.toml  seed.yaml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
src/: __init__.py  catalog.py  metadata.py  provenance.py
tests/: test_catalog.py  test_metadata.py
